<resources>
    <string name="app_name">My Rental Appartments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_dates">DD/MM/YYYY</string>
    <string name="number_guests">N Guests</string>
    <string name="picture_accommodation">Picture of the accommodation</string>
    <string name="lorem_fistrum">Lorem fistrum te voy a borrar el cerito a gramenawer no puedor va usté muy cargadoo
        ahorarr. No puedor condemor no puedor a wan no puedor ese pedazo de amatomaa quietooor a peich qué dise usteer.
        Mamaar a gramenawer a wan condemor papaar papaar me cago en tus muelas te va a hasé pupitaa diodenoo
        benemeritaar sexuarl. Se calle ustée ese hombree me cago en tus muelas ese pedazo de va usté muy cargadoo te voy
        a borrar el cerito me cago en tus muelas. Va usté muy cargadoo mamaar hasta luego Lucas qué dise usteer la
        caidita. Jarl amatomaa va usté muy cargadoo pupita ese que llega mamaar. Tiene musho peligro caballo blanco
        caballo negroorl benemeritaar tiene musho peligro diodenoo a gramenawer diodeno ese pedazo de fistro. A peich
        fistro la caidita por la gloria de mi madre te va a hasé pupitaa al ataquerl de la pradera papaar papaar mamaar.
        No te digo trigo por no llamarte Rodrigor me cago en tus muelas pecador por la gloria de mi madre pecador va
        usté muy cargadoo por la gloria de mi madre ese hombree no puedor mamaar caballo blanco caballo negroorl.
    </string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="books">Books</string>
    <string name="promos">Promos</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
</resources>
