<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
    />
    <item
        android:id="@+id/messages"
        android:title="@string/messages"
        android:icon="@drawable/ic_email_black_24dp"
    />
    <item
        android:id="@+id/books"
        android:title="@string/books"
        android:icon="@drawable/ic_library_books_black_24dp"
    />
    <item
        android:id="@+id/promo"
        android:title="@string/promos"
        android:icon="@drawable/ic_euro_symbol_black_24dp"
    />
    <item
        android:id="@+id/friend"
        android:title="@string/invite_a_friend"
        android:icon="@drawable/ic_person_add_black_24dp"
    />
</menu>